--- a/src/app/dice/dice.component.css
+++ b/src/app/dice/dice.component.css
@@ -11,3 +11,9 @@ button {
   position: absolute;
   transform: translate(-50%, 50%);
 }
+
+@media (min-width: 1280px) {
+  picture {
+    padding-bottom: 4.5rem;
+  }
+}
