--- a/src/app/advice/advice.component.css
+++ b/src/app/advice/advice.component.css
@@ -15,3 +15,15 @@ p {
   font-size: 1.5rem;
   letter-spacing: -0.2px;
 }
+
+@media (min-width: 1280px) {
+  h1 {
+    font-size: 0.8rem;
+    letter-spacing: 4px;
+  }
+
+  p {
+    font-size: 1.7rem;
+    letter-spacing: -0.3px;
+  }
+}
