--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,12 @@
   --dark-blue: #202733;
 }
 
+html,
 body {
+  height: 100%;
+}
+
+body {
+  background-color: var(--dark-blue);
   font-family: "Manrope", sans-serif;
 }
